--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,43 @@
+<main class="main">
+
+  <div class="card">
+
+    <!--contenedor de imagen-->
+    <div class="card__container-image">
+      <img src="./../assets/images/drawers.jpg" alt="drawers" class="card__image">
+    </div>
+
+    <!--contendor de contenido-->
+    <div class="card__container-content">
+      <h1 class="card__title">
+        Shift the overall look and feel by adding these wonderful touches to furniture in your home
+      </h1>
+      <p class="card__description">
+        Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.
+      </p>
+
+      <div class="card__container-author">
+
+        <div class="container__author-image">
+          <img src="./../assets/images/avatar-michelle.jpg" alt="Michelle Appleton" class="author__image">
+        </div>
+
+        <div class="author">
+          <h2 class="author__name">Michelle Appleton</h2>
+          <p class="author__date">28 Jun 2020</p>
+        </div>
+
+        <button type="button" class="button__share">
+          <img src="./../assets/images/icon-share.svg" class="button_image">
+        </button>
+      </div>
+    </div>
+  </div>
+
+</main>
+<footer class="footer">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Roraima Lugo</a>.
+</footer>
+
 <router-outlet />
