Estilos CSS a tarjeta

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,17 +18,19 @@
 
       <div class="card__container-author">
 
-        <div class="container__author-image">
-          <img src="./../assets/images/avatar-michelle.jpg" alt="Michelle Appleton" class="author__image">
-        </div>
+        <div class="container__author">
+          <div class="container__author-image">
+            <img src="./../assets/images/avatar-michelle.jpg" alt="Michelle Appleton" class="author__image">
+          </div>
 
-        <div class="author">
-          <h2 class="author__name">Michelle Appleton</h2>
-          <p class="author__date">28 Jun 2020</p>
+          <div class="author">
+            <h2 class="author__name">Michelle Appleton</h2>
+            <p class="author__date">28 Jun 2020</p>
+          </div>
         </div>
 
         <button type="button" class="button__share">
-          <img src="./../assets/images/icon-share.svg" class="button_image">
+          <i class="fa-solid fa-share button__icon"></i>
         </button>
       </div>
     </div>
