Correción de direccion url imagenes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
     <!--contenedor de imagen-->
     <div class="card__container-image">
-      <img src="./../assets/images/drawers.jpg" alt="drawers" class="card__image">
+      <img src="./assets/images/drawers.jpg" alt="drawers" class="card__image">
     </div>
 
     <!--contendor de contenido-->
@@ -20,7 +20,7 @@
 
         <div class="container__author">
           <div class="container__author-image">
-            <img src="./../assets/images/avatar-michelle.jpg" alt="Michelle Appleton" class="author__image">
+            <img src="./assets/images/avatar-michelle.jpg" alt="Michelle Appleton" class="author__image">
           </div>
 
           <div class="author">
